--- a/webapp/test/mockServer.html
+++ b/webapp/test/mockServer.html
@@ -3,7 +3,7 @@
 <head>
 	</script>
 	<meta charset="utf-8">
-	<title>est Page</title>
+	<title>Test Page</title>
 	<script
 	id="sap-ui-bootstrap"
 	src="https://openui5.hana.ondemand.com/resources/sap-ui-core.js"
